infra/k3s/20-external-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-service
  namespace: devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-service
  template:
    metadata:
      labels:
        app: external-service
    spec:
      containers:
        - name: external-service
          image: devsecops-external:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4001
