infra/k3s/10-weather.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather
  namespace: tp-devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
        - name: weather
          image: tp-weather:phase1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: weather
  namespace: tp-devsecops
spec:
  type: ClusterIP
  selector:
    app: weather
  ports:
    - name: http
      port: 4000
      targetPort: 4000
