infra/k3s/21-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: devsecops
spec:
  type: ClusterIP
  selector:
    app: external-service
  ports:
    - name: http
      port: 4001
      targetPort: 4001
