infra/k3s/31-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: devsecops
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 4000
      targetPort: 4000
